# NFT-Marketplace-Game-Solana

./: .gitignore  README.md
dapp/: README.md
game_server/: README.md  index.js  package-lock.json  package.json
synesis_program/: Anchor.toml  ReadMe.md  package-lock.json  package.json
synesis_program/programs/synesis_program/: Cargo.toml
synesis_program/programs/synesis_program/src/: lib.rs
synesis_program/programs/synesis_program/src/admin/: initialization.rs  mod.rs
synesis_program/programs/synesis_program/src/admin/_auction/: mod.rs  open_auction.rs
synesis_program/programs/synesis_program/src/admin/_rewards/: mod.rs
synesis_program/programs/synesis_program/src/admin/collections/: _set_premint_amount_per_time.rs  _set_step.rs  claim_admin_escrow.rs  mod.rs
synesis_program/programs/synesis_program/src/admin/season/: _cli_manual_mint_or_admin_airdrop_check_possibility_later.rs  _test_admin_set_values.rs  create_season.rs  mod.rs  open_season.rs
synesis_program/programs/synesis_program/src/globals/: accounts.rs  constants.rs  enums.rs  errors.rs  event.rs  mod.rs  traits.rs  utility.rs
synesis_program/programs/synesis_program/src/marketplace/: mod.rs
synesis_program/programs/synesis_program/src/marketplace/_rewards/: apply_reward.rs
synesis_program/programs/synesis_program/src/marketplace/collections/: _upgrade_nft_metadata.rs  claim_airdrop_reserved_nfts.rs  freely_mint_nft_one.rs  initialize_user_reserved_account.rs  mint_whitelist_nft_one.rs  mod.rs
synesis_program/tests/: admin.ts  marketplace.ts  utils.ts
(+9 files in other folders)
